검색창 작업 중
아이콘 & 버튼 위치 조정 필요

--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
         <!-- 중간로고 -->
         <div class="big-logo">
             <img src="images/m_sec01_logo_3.png" alt="빙그레 로고">
-        </div>        
+        </div>       
+        <!-- 검색 -->
+        <div class="search">
+            <input type="text" placeholder="검색어를 입력해주세요.">
+            <div class="search-inner">
+                <button class="bt-search">SEARCH</button>
+            </div>
+        </div>
     </header>
     <!-- 메인 -->
     <div class="main">
-        <!-- 검색 -->
-        
         <!-- cantent-1 -->
         <!-- cantent-2 -->
         <!-- cantent-3 -->
