--- a/index.html
+++ b/index.html
@@ -1,57 +1,168 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>빙그레</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="wrap">
-    <!-- 헤더 -->
-    <header>
+      <!-- 헤더 -->
+      <header>
         <div class="header-inner">
-            <!-- 상단로고 -->
-        <div class="logo">
-            <a href="#"><img src="images/logo-pc.png" alt="빙그레 로고"></a>
-        </div>
-        <!-- 상단메뉴 -->
-        <nav class="menu">
+          <!-- 상단로고 -->
+          <div class="logo">
+            <a href="#"><img src="images/logo-pc.png" alt="빙그레 로고" /></a>
+          </div>
+          <!-- 상단메뉴 -->
+          <nav class="menu">
             <ul>
-                <li><a href="#">회사소개</a></li>
-                <li><a href="#">제품소개</a></li>
-                <li><a href="#">지속가능경영</a></li>
-                <li><a href="#">투자정보</a></li>
-                <li><a href="#">뉴스룸</a></li>
-                <li><a href="#">고객센터</a></li>
+              <li><a href="#">회사소개</a></li>
+              <li><a href="#">제품소개</a></li>
+              <li><a href="#">지속가능경영</a></li>
+              <li><a href="#">투자정보</a></li>
+              <li><a href="#">뉴스룸</a></li>
+              <li><a href="#">고객센터</a></li>
             </ul>
-        </nav>
+          </nav>
         </div>
         <!-- 중간로고 -->
         <div class="big-logo">
-            <img src="images/m_sec01_logo_3.png" alt="빙그레 로고">
-        </div>       
-        <!-- 검색 -->
-        <div class="search">
-            <input type="text" placeholder="검색어를 입력해주세요.">
-            <div class="search-inner">
-                <button class="bt-search">SEARCH</button>
-            </div>
+          <img src="images/m_sec01_logo_3.png" alt="빙그레 로고" />
         </div>
-    </header>
-    <!-- 메인 -->
-    <div class="main">
-        <!-- cantent-1 -->
-        <!-- cantent-2 -->
-        <!-- cantent-3 -->
-        <!-- cantent-4 -->
-    </div>
-    <!-- 푸터 -->
-    <footer>
+        <!-- 검색 -->
+        <div class="search_bar">
+          <label for="search"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="fa-magnifying-glass"
+              height="16"
+              width="16"
+              viewBox="0 0 512 512"
+            >
+              <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
+              /></svg
+          ></label>
+          <input type="text" placeholder="제품명를 입력해주세요" id="search" />
+          <button type="submit">SEARCH</button>
+        </div>
+      </header>
+      <!-- 메인 -->
+      <div class="main">
+        <!-- 행복한 빙그레의 맛 -->
+        <div class="taste">
+          <h1>행복한 빙그레의 맛!</h1>
+          <ul class="taste-inner">
+            <li>
+              <img
+                src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png"
+                alt="아이스크림"
+              />
+              <p>아이스크림</p>
+            </li>
+            <li>
+              <img
+                src="images/fbf974f7-e6c8-4df6-87a5-3154b5cd647c.png"
+                alt="우유/치즈"
+              />
+              <p>우유/치즈</p>
+            </li>
+            <li>
+              <img
+                src="images/1dea8cd4-bdb2-4ac0-a42c-8cd60968aa36.png"
+                alt="발효유"
+              />
+              <p>발효유</p>
+            </li>
+            <li>
+              <img
+                src="images/8bdfd152-49d3-4430-b64b-9ecb43e9cb09.png"
+                alt="커피"
+              />
+              <p>커피</p>
+            </li>
+            <li>
+              <img
+                src="images/99f5db34-3e58-4df7-b43a-e97714ca0287.png"
+                alt="주스"
+              />
+              <p>주스</p>
+            </li>
+            <li>
+              <img
+                src="images/481f6075-a2a3-4070-85b0-3000a5817a10.png"
+                alt="음료"
+              />
+              <p>음료</p>
+            </li>
+          </ul>
+        </div>
+        <!-- Brand Shop -->
+        <div class="brandshop">
+          <h1>BRAND SHOP</h1>
+          <ul class="brandshop-inner">
+            <li><img src="images/m_sec02_logo01.png" alt="더단백" /></li>
+            <li><img src="images/m_sec02_logo02.png" alt="아카페라" /></li>
+            <li><img src="images/m_sec02_logo03.png" alt="요플레" /></li>
+            <li><img src="images/m_sec02_logo04.png" alt="바나나맛우유" /></li>
+            <li><img src="images/m_sec02_logo05.png" alt="끌레도르" /></li>
+            <li><img src="images/m_sec02_logo06.png" alt="마노플랜" /></li>
+          </ul>
+        </div>
+        <!-- 고객문의 및 불편사항 -->
+        <div class="cs">
+          <h1>고객문의 및 불편사항</h1>
+          <div class="cs-inner">
+            <div class="cs-wrap">
+              <ul class="email">
+                <h2>이메일 상담</h2>
+                <p>
+                  빙그래에 궁금한 사항을 문의해 주세요.<br />최대한 빠른
+                  시일내에<br />친절하게 답변해드리겠습니다.
+                </p>
+                <button>상담하기</button>
+              </ul>
+              <ul class="call">
+                <h2>전화 상담</h2>
+                <h3>080.022.0056</h3>
+                <p>월~금(공휴일제외) <span>09:00~17:30</span></p>
+              </ul>
+            </div>
+
+            <div class="qna">
+              <h2>
+                자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
+              </h2>
+              <button>더보기</button>
+              <ul>
+                <li>Q. 아이스크림에는 유통기한이 없나요?</li>
+                <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                <li>
+                  Q. 아이스크림, 음료 등 제품 공급(납풉) 관련 문의드리고 싶어요.
+                </li>
+                <li>Q. 요플레 분리배풀(라벨제거) 방법 알려주세요</li>
+                <li>
+                  Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- 빙그레 임직원 및 종사자 온라인제보 -->
+      </div>
+      <i class="fas fa-magnifying-glass"></i>
+      <!-- 푸터 -->
+      <footer>
         <!-- left -->
         <!-- right -->
-    </footer>
+      </footer>
     </div>
-    
-</body>
+  </body>
 </html>
