--- a/index.html
+++ b/index.html
@@ -136,26 +136,45 @@
               </ul>
             </div>
 
-            <div class="qna">
-              <h2>
-                자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
-              </h2>
-              <button>더보기</button>
-              <ul>
-                <li>Q. 아이스크림에는 유통기한이 없나요?</li>
-                <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
-                <li>
-                  Q. 아이스크림, 음료 등 제품 공급(납풉) 관련 문의드리고 싶어요.
-                </li>
-                <li>Q. 요플레 분리배풀(라벨제거) 방법 알려주세요</li>
-                <li>
-                  Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?
-                </li>
-              </ul>
+            <div class="qna-wrap">
+              <div class="qna-head">
+                <h2>
+                  자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
+                </h2>
+                <button>더보기</button>
+              </div>
+              <div class="qna-box">
+                <ul class="qna-1">
+                    <li>Q. 아이스크림에는 유통기한이 없나요?</li>
+                    <li>Q. 아이스크림, 음료 등 제품 공급(납풉) 관련 문의드리고 싶어요.</li>
+                    <li>Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?</li>
+                </ul>
+                <ul class="qna-2">
+                    <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                    <li>Q. 요플레 분리배풀(라벨제거) 방법 알려주세요</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
         <!-- 빙그레 임직원 및 종사자 온라인제보 -->
+        <div class="report">
+          <h2>빙그레 임직원 및 종사자 온라인 제보</h2>
+          <div class="report-wrap">
+            <div class="report-1">
+              <p>
+                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, 기타 부정행위 제보
+              </p>
+              <button>사이버 신고센터</button>
+            </div>
+            <div class="report-2">
+              <p>
+                빙그레 종사자의 유해위험요소 및 안전보건에 관한 의견 제보
+              </p>
+              <button>안전신문고</button>
+            </div>
+          </div>
+        </div>
       </div>
       <i class="fas fa-magnifying-glass"></i>
       <!-- 푸터 -->
