--- a/index.html
+++ b/index.html
@@ -139,19 +139,25 @@
             <div class="qna-wrap">
               <div class="qna-head">
                 <h2>
-                  자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담 바랍니다.
+                  자주 묻는 질문에 내용이 없을 경우, 이메일 및 전화 상담
+                  바랍니다.
                 </h2>
                 <button>더보기</button>
               </div>
               <div class="qna-box">
                 <ul class="qna-1">
-                    <li>Q. 아이스크림에는 유통기한이 없나요?</li>
-                    <li>Q. 아이스크림, 음료 등 제품 공급(납풉) 관련 문의드리고 싶어요.</li>
-                    <li>Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?</li>
+                  <li>Q. 아이스크림에는 유통기한이 없나요?</li>
+                  <li>
+                    Q. 아이스크림, 음료 등 제품 공급(납풉) 관련 문의드리고
+                    싶어요.
+                  </li>
+                  <li>
+                    Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?
+                  </li>
                 </ul>
                 <ul class="qna-2">
-                    <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
-                    <li>Q. 요플레 분리배풀(라벨제거) 방법 알려주세요</li>
+                  <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                  <li>Q. 요플레 분리배풀(라벨제거) 방법 알려주세요</li>
                 </ul>
               </div>
             </div>
@@ -159,28 +165,62 @@
         </div>
         <!-- 빙그레 임직원 및 종사자 온라인제보 -->
         <div class="report">
-          <h2>빙그레 임직원 및 종사자 온라인 제보</h2>
+          <h1>빙그레 임직원 및 종사자 온라인 제보</h1>
           <div class="report-wrap">
             <div class="report-1">
               <p>
-                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, 기타 부정행위 제보
+                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, <br />기타
+                부정행위 제보
               </p>
               <button>사이버 신고센터</button>
             </div>
-            <div class="report-2">
-              <p>
-                빙그레 종사자의 유해위험요소 및 안전보건에 관한 의견 제보
-              </p>
+            <div class="report-1">
+              <p>빙그레 종사자의 유해위험요소 및 안전보건에 관한 의견 제보</p>
               <button>안전신문고</button>
             </div>
           </div>
         </div>
       </div>
-      <i class="fas fa-magnifying-glass"></i>
       <!-- 푸터 -->
       <footer>
-        <!-- left -->
-        <!-- right -->
+        <div class="ft-top">
+          <div class="ft-logo"></div>
+          <ul>
+            <li><a href="#">개인정보처리방침</a></li>
+            <li><a href="#">오시는길</a></li>
+          </ul>
+        </div>
+        <div class="ft-md">
+          <p>회사명 : 빙그레</p>
+          <p>
+            경기도 남양주시 다산동 4344-3 / 경기도 남양주시 다산순환로
+            45(다산동)
+          </p>
+        </div>
+        <div class="ft-bt">
+          <ul class="ft-icon">
+            <li>
+              <a href="https://blog.naver.com/official_binggrae">
+                <img src="images/footer_sns04.png" alt="네이버블로그" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/binggraekorea/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UCOmz8eDBQ04h6i0_8p_V7eg"
+                ><i class="fab fa-youtube"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.tftmall.co.kr/main/index.php">
+                <img src="images/footer_sns03.png" alt="TFT" />
+              </a>
+            </li>
+          </ul>
+        </div>
       </footer>
     </div>
   </body>
