글자 폰트 수정 완료

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <ul class="email">
                 <h2>이메일 상담</h2>
                 <p>
-                  빙그래에 궁금한 사항을 문의해 주세요.<br />최대한 빠른
+                  빙그레에 궁금한 사항을 문의해 주세요.<br />최대한 빠른
                   시일내에<br />친절하게 답변해드리겠습니다.
                 </p>
                 <button>상담하기</button>
