스와이퍼 적용 완료 / 반응형 작업 중
헤드 배경 이미지 사이즈 조정

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <!-- JS 적용 -->
     <!-- Jquery 적용 -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -71,62 +72,88 @@
         <div class="taste">
           <h1>행복한 빙그레의 맛!</h1>
           <!-- Swiper -->
-          <div class="swiper tasteSwiper">
-            <ul class="swiper-wrapper">
-              <li class="swiper-slide">
-                <img src="images/1.png" alt="아이스크림" />
-                <p>아이스크림</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/2.png" alt="우유/치즈" />
-                <p>우유/치즈</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/3.png" alt="발효유" />
-                <p>발효유</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/4.png" alt="커피" />
-                <p>커피</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/5.png" alt="주스" />
-                <p>주스</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/6.png" alt="음료" />
-                <p>음료</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/7.png" alt="스낵/디저트" />
-                <p>스낵/디저트</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/8.png" alt="건강지향" />
-                <p>건강지향</p>
-              </li>
-              <li class="swiper-slide">
-                <img src="images/9.png" alt="수출제품" />
-                <p>수출제품</p>
-              </li>
-            </ul>
-            <!-- <div class="controls">
+          <div class="taste-box">
+            <div class="swiper tasteSwiper">
+              <ul class="swiper-wrapper">
+                <li class="swiper-slide">
+                  <img src="images/1.png" alt="아이스크림" />
+                  <p>아이스크림</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/2.png" alt="우유/치즈" />
+                  <p>우유/치즈</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/3.png" alt="발효유" />
+                  <p>발효유</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/4.png" alt="커피" />
+                  <p>커피</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/5.png" alt="주스" />
+                  <p>주스</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/6.png" alt="음료" />
+                  <p>음료</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/7.png" alt="스낵/디저트" />
+                  <p>스낵/디저트</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/8.png" alt="건강지향" />
+                  <p>건강지향</p>
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/9.png" alt="수출제품" />
+                  <p>수출제품</p>
+                </li>
+              </ul>
+            </div>
+            <div class="controls">
               <span class="prev"><i class="fas fa-chevron-left"></i></span>
               <span class="next"><i class="fas fa-chevron-right"></i></span>
-            </div> -->
+            </div>
           </div>
         </div>
         <!-- Brand Shop -->
         <div class="brandshop">
           <h1>BRAND SHOP</h1>
-          <ul class="brandshop-inner">
-            <li><img src="images/m_sec02_logo01.png" alt="더단백" /></li>
-            <li><img src="images/m_sec02_logo02.png" alt="아카페라" /></li>
-            <li><img src="images/m_sec02_logo03.png" alt="요플레" /></li>
-            <li><img src="images/m_sec02_logo04.png" alt="바나나맛우유" /></li>
-            <li><img src="images/m_sec02_logo05.png" alt="끌레도르" /></li>
-            <li><img src="images/m_sec02_logo06.png" alt="마노플랜" /></li>
-          </ul>
+          <div class="brandshop-box">
+            <!-- Swiper -->
+            <div class="swiper brandSwiper">
+              <ul class="swiper-wrapper">
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo01.png" alt="더단백" />
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo02.png" alt="아카페라" />
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo03.png" alt="요플레" />
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo04.png" alt="바나나맛우유" />
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo05.png" alt="끌레도르" />
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo06.png" alt="마노플랜" />
+                </li>
+                <li class="swiper-slide">
+                  <img src="images/m_sec02_logo07.png" alt="비바시티" />
+                </li>
+              </ul>
+            </div>
+            <div class="controls">
+              <span class="prev"><i class="fas fa-chevron-left"></i></span>
+              <span class="next"><i class="fas fa-chevron-right"></i></span>
+            </div>
+          </div>
         </div>
         <!-- 고객문의 및 불편사항 -->
         <div class="cs">
