반응형 768 사이즈 작업 완료

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <li><a href="#">뉴스룸</a></li>
               <li><a href="#">고객센터</a></li>
             </ul>
+            <i class="fas fa-bars"></i>
           </nav>
         </div>
         <!-- 중간로고 -->
@@ -162,9 +163,11 @@
             <div class="cs-wrap">
               <ul class="email">
                 <h2>이메일 상담</h2>
-                <p>
-                  빙그레에 궁금한 사항을 문의해 주세요.<br />최대한 빠른
-                  시일내에<br />친절하게 답변해드리겠습니다.
+                <p class="email-p-1">
+                  빙그레에 궁금한 사항을 문의해 주세요.<br>최대한 빠른
+                  시일내에<br>친절하게 답변해드리겠습니다.
+                </p>
+                <p class="email-p-2"> 빙그레에 궁금한 사항을<br>문의해 주세요.
                 </p>
                 <button>상담하기</button>
               </ul>
@@ -198,6 +201,18 @@
                   <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
                   <li>Q. 요플레 분리배출(라벨제거) 방법 알려주세요</li>
                 </ul>
+                <ul class="qna-3">
+                  <li>Q. 아이스크림에는 유통기한이 없나요?</li>
+                  <li>
+                    Q. 아이스크림, 음료 등 제품 공급(납품) 관련 문의드리고
+                    싶어요.
+                  </li>
+                  <li>
+                    Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?
+                  </li>
+                  <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
+                  <li>Q. 요플레 분리배출(라벨제거) 방법 알려주세요</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -208,13 +223,13 @@
           <div class="report-wrap">
             <div class="report-1">
               <p>
-                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, <br />기타
+                빙그레 임직원의 부당한 요구 또는  <br>업무처리, 인권고충,기타
                 부정행위 제보
               </p>
               <button>사이버 신고센터</button>
             </div>
             <div class="report-1">
-              <p>빙그레 종사자의 유해·위험요소 및 안전보건에 관한 의견 제보</p>
+              <p>빙그레 종사자의 유해·위험요소 및  <br>안전보건에 관한 의견 제보</p>
               <button>안전신문고</button>
             </div>
           </div>
