빙그레체 종류 교체/ 굵기 수정

--- a/index.html
+++ b/index.html
@@ -164,10 +164,11 @@
               <ul class="email">
                 <h2>이메일 상담</h2>
                 <p class="email-p-1">
-                  빙그레에 궁금한 사항을 문의해 주세요.<br>최대한 빠른
-                  시일내에<br>친절하게 답변해드리겠습니다.
+                  빙그레에 궁금한 사항을 문의해 주세요.<br />최대한 빠른
+                  시일내에<br />친절하게 답변해드리겠습니다.
                 </p>
-                <p class="email-p-2"> 빙그레에 궁금한 사항을<br>문의해 주세요.
+                <p class="email-p-2">
+                  빙그레에 궁금한 사항을<br />문의해 주세요.
                 </p>
                 <button>상담하기</button>
               </ul>
@@ -223,13 +224,15 @@
           <div class="report-wrap">
             <div class="report-1">
               <p>
-                빙그레 임직원의 부당한 요구 또는  <br>업무처리, 인권고충,기타
+                빙그레 임직원의 부당한 요구 또는 <br />업무처리, 인권고충,기타
                 부정행위 제보
               </p>
               <button>사이버 신고센터</button>
             </div>
             <div class="report-1">
-              <p>빙그레 종사자의 유해·위험요소 및  <br>안전보건에 관한 의견 제보</p>
+              <p>
+                빙그레 종사자의 유해·위험요소 및 <br />안전보건에 관한 의견 제보
+              </p>
               <button>안전신문고</button>
             </div>
           </div>
