320 / 768 사이즈 반응형 작업 완료

--- a/index.html
+++ b/index.html
@@ -224,14 +224,21 @@
           <div class="report-wrap">
             <div class="report-1">
               <p>
-                빙그레 임직원의 부당한 요구 또는 <br />업무처리, 인권고충,기타
+                빙그레 임직원의 부당한 요구 또는 <br>업무처리, 인권고충, 기타
+                부정행위 제보
+              </p>
+              <p>
+                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, <br>기타
                 부정행위 제보
               </p>
               <button>사이버 신고센터</button>
             </div>
             <div class="report-1">
               <p>
-                빙그레 종사자의 유해·위험요소 및 <br />안전보건에 관한 의견 제보
+                빙그레 종사자의 유해·위험요소 및 <br>안전보건에 관한 의견 제보
+              </p>
+              <p>
+                빙그레 종사자의 <br>유해·위험요소 및 <br>안전보건에 관한 의견 제보
               </p>
               <button>안전신문고</button>
             </div>
