파비콘 적용 완료 / 반응형 수정 완료

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 파비콘 -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="images/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <title>빙그레</title>
     <link
       rel="stylesheet"
@@ -212,7 +220,7 @@
                     Q. 빙그레 제품을 구입할 수 있는 온라인 몰이 따로 있나요?
                   </li>
                   <li>Q. 제품 유통기한 뒤에 있는 알파벳 기호는 무엇인가요?</li>
-                  <li>Q. 요플레 분리배출(라벨제거) 방법 알려주세요</li>
+                  <li>Q. 요플레 분리배출(라벨제거) 방법 알려주세요.</li>
                 </ul>
               </div>
             </div>
@@ -224,21 +232,22 @@
           <div class="report-wrap">
             <div class="report-1">
               <p>
-                빙그레 임직원의 부당한 요구 또는 <br>업무처리, 인권고충, 기타
+                빙그레 임직원의 부당한 요구 또는 <br />업무처리, 인권고충, 기타
                 부정행위 제보
               </p>
               <p>
-                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, <br>기타
+                빙그레 임직원의 부당한 요구 또는 업무처리, 인권고충, <br />기타
                 부정행위 제보
               </p>
               <button>사이버 신고센터</button>
             </div>
             <div class="report-1">
               <p>
-                빙그레 종사자의 유해·위험요소 및 <br>안전보건에 관한 의견 제보
+                빙그레 종사자의 유해·위험요소 및 <br />안전보건에 관한 의견 제보
               </p>
               <p>
-                빙그레 종사자의 <br>유해·위험요소 및 <br>안전보건에 관한 의견 제보
+                빙그레 종사자의 <br />유해·위험요소 및 <br />안전보건에 관한
+                의견 제보
               </p>
               <button>안전신문고</button>
             </div>
