--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
               <li><a href="#">뉴스룸</a></li>
               <li><a href="#">고객센터</a></li>
             </ul>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars open"></i>
             <ul class="menu-sub">
-              <li><a href="#">회사소개</a></li>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="close"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg><li><a href="#">회사소개</a></li>
               <li><a href="#">제품소개</a></li>
               <li><a href="#">지속가능경영</a></li>
               <li><a href="#">투자정보</a></li>
@@ -78,15 +78,14 @@
             </ul>
           </nav>
         </div>
-        <script>
-          const toggleBtn = document.querySelector(".fas");
+        <!-- <script>
+          const toggleBtn = document.querySelector(".menu .fas");
           const menu = document.querySelector(".menu-sub");
-
           // 반응형 웹 햄버거 메뉴 클릭 시 메뉴 펼침, 숨김 처리
           toggleBtn.addEventListener("click", () => {
             menu.classList.toggle("active");
           });
-        </script>
+        </script> -->
         <!-- 중간로고 -->
         <div class="big-logo">
           <img src="images/m_sec01_logo_3.png" alt="빙그레 로고" />
