--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modal.js"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5N59H3V05Q"></script>
 <script>
@@ -69,6 +70,22 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBH8JSWG"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <!-- 모달창 -->
+  <div class="modal-wrap">
+    <div class="modal-main">
+      <span class="modal-logo"></span>
+      <p class="modal-nonotic">
+        해당 사이트는 <strong>스터디용</strong>으로 제작되었으며,<br />
+        리소스는 <strong>원저작자</strong>에게 있음을 알려드립니다.<br />
+        문제사항이 있을 시 연락주시면 빠른 시일 내 조치하겠습니다.<br />
+        <span>본 사이트는 Chrome 에 최적화되어 있습니다.</span>
+      </p>
+      <div class="modal-close">
+        확인했습니다.
+        <i>( Click 하여 닫기 )</i>
+      </div>
+    </div>
+  </div>
     <div class="wrap">
       <!-- 헤더 -->
       <header>
